--- a/package.json
+++ b/package.json
@@ -44,5 +44,6 @@
     "react-native-svg-transformer": "^0.14.3",
     "typescript": "~4.0.0"
   },
-  "private": true
+  "private": true,
+  "proxy": "http://192.168.0.100:8145/"
 }
