--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
