--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "expo-auth-session": "~3.2.3",
     "expo-font": "~9.1.0",
     "expo-linear-gradient": "~9.1.0",
+    "expo-location": "~12.0.4",
+    "expo-permissions": "~12.0.1",
     "expo-random": "~11.1.2",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
@@ -30,6 +32,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-maps": "^0.30.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
